2008-04-04  Hubert Figuiere  <hub@figuiere.net>

	* Start 2.1.0

=== 2.0.1 ===

2008-04-05  Hubert Figuiere  <hub@figuiere.net>

	* source/XMPFiles/FormatSupport/Reconcile_Impl.cpp, 
	configure.ac: Check for iconv constness. (Closes #14613)

2008-04-04  Hubert Figuiere  <hub@figuiere.net>

	* exempi/xmp.h: no stdbool.h on Sun compilers
	(Closes #14612)

=== 2.0.0 ===

2008-04-01  Hubert Figuiere  <hub@figuiere.net>

	* configure.ac: This is really 2.0.0

	* exempi/tests/test1.cpp, exempi/tests/test1.xmp:
	Add a test on "Rating:".

2008-03-30  Hubert Figuiere  <hub@figuiere.net>

	* source/XMPFiles/FormatSupport/EndianUtils.hpp,
	configure.ac: Fix the endian detection. (Closes #15263)

2008-02-22  Hubert Figuiere  <hub@figuiere.net>

	* source/XMPCore/XMPMeta.cpp, 
	source/XMPFiles/FormatSupport/GIF_Support.cpp,
	source/XMPFiles/FormatSupport/ID3_Support.cpp,
	source/XMPFiles/FormatSupport/PNG_Support.cpp,
	source/XMPFiles/FormatSupport/PSIR_FileWriter.cpp,
	source/XMPFiles/FormatSupport/PSIR_MemoryReader.cpp,
	source/XMPFiles/FormatSupport/ReconcileIPTC.cpp,
	source/XMPFiles/FormatSupport/TIFF_Support.hpp:
	Add some missing includes. (Closes #14615)

	* source/XMPFiles/FormatSupport/EndianUtils.hpp: endian
	detection on Solaris. (Closes #14614)

=== 1.99.9 ===

2008-01-30  Hubert Figuiere  <hub@figuiere.net>

	* exempi/xmp.h (XMP_OPEN_OPNLYXMP): Bad API breakage fix (introduced
	in 1.99.8)

=== 1.99.8 ===

2008-01-23  Hubert Figuiere  <hub@figuiere.net>

	* source/XMPFiles/FormatSupport/GIF_Support.cpp (ReadHeader): Fix
	a nasty buffer overflow. Closes Debian #454297. Closes Gnome #484105
	Patch by Michael Biebl <biebl@debian.org>
	(ReadBlock): Fix another possible overflow similar to the one in
	ReadHeader()

2008-01-22  Hubert Figuiere  <hub@figuiere.net>

	* exempi/xmp.h: Fix a typo. (Closes #14200)

2008-01-18  Hubert Figuiere  <hub@figuiere.net>

	* source/XMPFiles/Makefile.am: Disable strict aliasing. This fix
	some nasty warning.
